{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 43,
  "lineage": "9048908b-6813-63cd-7b1c-034dacf0e091",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "sillkLb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/65684f2a-01e2-443f-8763-39047d2a965b/resourceGroups/SiLLK/providers/Microsoft.Network/loadBalancers/sillkLb/frontendIPConfigurations/sillkfend-ip",
                "load_balancer_rules": [
                  "/subscriptions/65684f2a-01e2-443f-8763-39047d2a965b/resourceGroups/SiLLK/providers/Microsoft.Network/loadBalancers/sillkLb/loadBalancingRules/LBRule"
                ],
                "name": "sillkfend-ip",
                "outbound_rules": [
                  "/subscriptions/65684f2a-01e2-443f-8763-39047d2a965b/resourceGroups/SiLLK/providers/Microsoft.Network/loadBalancers/sillkLb/outboundRules/sillkobrule"
                ],
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/65684f2a-01e2-443f-8763-39047d2a965b/resourceGroups/SiLLK/providers/Microsoft.Network/publicIPAddresses/sillk-pip"
              }
            ],
            "id": "/subscriptions/65684f2a-01e2-443f-8763-39047d2a965b/resourceGroups/SiLLK/providers/Microsoft.Network/loadBalancers/sillkLb",
            "location": "eastus",
            "name": "sillkLb",
            "resource_group_name": "SiLLK",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.publicIP",
            "azurerm_resource_group.SiLLK"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "BackEnd-Pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/65684f2a-01e2-443f-8763-39047d2a965b/resourceGroups/SiLLK/providers/Microsoft.Compute/virtualMachineScaleSets/sillkss/virtualMachines/2/networkInterfaces/sillk-ssnic/ipConfigurations/internal",
              "/subscriptions/65684f2a-01e2-443f-8763-39047d2a965b/resourceGroups/SiLLK/providers/Microsoft.Compute/virtualMachineScaleSets/sillkss/virtualMachines/3/networkInterfaces/sillk-ssnic/ipConfigurations/internal"
            ],
            "id": "/subscriptions/65684f2a-01e2-443f-8763-39047d2a965b/resourceGroups/SiLLK/providers/Microsoft.Network/loadBalancers/sillkLb/backendAddressPools/sillkbend-pool",
            "load_balancing_rules": [
              "/subscriptions/65684f2a-01e2-443f-8763-39047d2a965b/resourceGroups/SiLLK/providers/Microsoft.Network/loadBalancers/sillkLb/loadBalancingRules/LBRule"
            ],
            "loadbalancer_id": "/subscriptions/65684f2a-01e2-443f-8763-39047d2a965b/resourceGroups/SiLLK/providers/Microsoft.Network/loadBalancers/sillkLb",
            "name": "sillkbend-pool",
            "outbound_rules": [
              "/subscriptions/65684f2a-01e2-443f-8763-39047d2a965b/resourceGroups/SiLLK/providers/Microsoft.Network/loadBalancers/sillkLb/outboundRules/sillkobrule"
            ]
          },
          "dependencies": [
            "azurerm_lb.sillkLb",
            "azurerm_public_ip.publicIP",
            "azurerm_resource_group.SiLLK"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_outbound_rule",
      "name": "sillklbrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocated_outbound_ports": 1024,
            "backend_address_pool_id": "/subscriptions/65684f2a-01e2-443f-8763-39047d2a965b/resourceGroups/SiLLK/providers/Microsoft.Network/loadBalancers/sillkLb/backendAddressPools/sillkbend-pool",
            "enable_tcp_reset": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/65684f2a-01e2-443f-8763-39047d2a965b/resourceGroups/SiLLK/providers/Microsoft.Network/loadBalancers/sillkLb/frontendIPConfigurations/sillkfend-ip",
                "name": "sillkfend-ip"
              }
            ],
            "id": "/subscriptions/65684f2a-01e2-443f-8763-39047d2a965b/resourceGroups/SiLLK/providers/Microsoft.Network/loadBalancers/sillkLb/outboundRules/sillkobrule",
            "idle_timeout_in_minutes": 4,
            "loadbalancer_id": "/subscriptions/65684f2a-01e2-443f-8763-39047d2a965b/resourceGroups/SiLLK/providers/Microsoft.Network/loadBalancers/sillkLb",
            "name": "sillkobrule",
            "protocol": "All"
          },
          "dependencies": [
            "azurerm_lb.sillkLb",
            "azurerm_lb_backend_address_pool.BackEnd-Pool",
            "azurerm_public_ip.publicIP",
            "azurerm_resource_group.SiLLK"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "sillkprobe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/65684f2a-01e2-443f-8763-39047d2a965b/resourceGroups/SiLLK/providers/Microsoft.Network/loadBalancers/sillkLb/probes/sillk-probe",
            "interval_in_seconds": 15,
            "load_balancer_rules": [
              "/subscriptions/65684f2a-01e2-443f-8763-39047d2a965b/resourceGroups/SiLLK/providers/Microsoft.Network/loadBalancers/sillkLb/loadBalancingRules/LBRule"
            ],
            "loadbalancer_id": "/subscriptions/65684f2a-01e2-443f-8763-39047d2a965b/resourceGroups/SiLLK/providers/Microsoft.Network/loadBalancers/sillkLb",
            "name": "sillk-probe",
            "number_of_probes": 2,
            "port": 22,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.sillkLb",
            "azurerm_public_ip.publicIP",
            "azurerm_resource_group.SiLLK"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "LBRule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/65684f2a-01e2-443f-8763-39047d2a965b/resourceGroups/SiLLK/providers/Microsoft.Network/loadBalancers/sillkLb/backendAddressPools/sillkbend-pool"
            ],
            "backend_port": 80,
            "disable_outbound_snat": true,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/65684f2a-01e2-443f-8763-39047d2a965b/resourceGroups/SiLLK/providers/Microsoft.Network/loadBalancers/sillkLb/frontendIPConfigurations/sillkfend-ip",
            "frontend_ip_configuration_name": "sillkfend-ip",
            "frontend_port": 80,
            "id": "/subscriptions/65684f2a-01e2-443f-8763-39047d2a965b/resourceGroups/SiLLK/providers/Microsoft.Network/loadBalancers/sillkLb/loadBalancingRules/LBRule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/65684f2a-01e2-443f-8763-39047d2a965b/resourceGroups/SiLLK/providers/Microsoft.Network/loadBalancers/sillkLb",
            "name": "LBRule",
            "probe_id": "/subscriptions/65684f2a-01e2-443f-8763-39047d2a965b/resourceGroups/SiLLK/providers/Microsoft.Network/loadBalancers/sillkLb/probes/sillk-probe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.sillkLb",
            "azurerm_lb_backend_address_pool.BackEnd-Pool",
            "azurerm_lb_probe.sillkprobe",
            "azurerm_public_ip.publicIP",
            "azurerm_resource_group.SiLLK"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "endpoint-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/65684f2a-01e2-443f-8763-39047d2a965b/resourceGroups/SiLLK/providers/Microsoft.Network/networkSecurityGroups/sillkepnsg",
            "location": "eastus",
            "name": "sillkepnsg",
            "resource_group_name": "SiLLK",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.4.0",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "allow-private-endpoint",
                "priority": 300,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.2.0",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "80",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.SiLLK"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vm-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/65684f2a-01e2-443f-8763-39047d2a965b/resourceGroups/SiLLK/providers/Microsoft.Network/networkSecurityGroups/sillkvmnsg",
            "location": "eastus",
            "name": "sillkvmnsg",
            "resource_group_name": "SiLLK",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "sillkallow-inbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.4.0",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-vmss",
                "priority": 400,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.2.0",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "80",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.SiLLK"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow-endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.0.4.0",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/65684f2a-01e2-443f-8763-39047d2a965b/resourceGroups/SiLLK/providers/Microsoft.Network/networkSecurityGroups/sillkepnsg/securityRules/allow-private-endpoint",
            "name": "allow-private-endpoint",
            "network_security_group_name": "sillkepnsg",
            "priority": 300,
            "protocol": "Tcp",
            "resource_group_name": "SiLLK",
            "source_address_prefix": "10.0.2.0",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "80",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.endpoint-nsg",
            "azurerm_resource_group.SiLLK"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow-vmss",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.0.4.0",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/65684f2a-01e2-443f-8763-39047d2a965b/resourceGroups/SiLLK/providers/Microsoft.Network/networkSecurityGroups/sillkvmnsg/securityRules/allow-vmss",
            "name": "allow-vmss",
            "network_security_group_name": "sillkvmnsg",
            "priority": 400,
            "protocol": "Tcp",
            "resource_group_name": "SiLLK",
            "source_address_prefix": "10.0.2.0",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "80",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.vm-nsg",
            "azurerm_resource_group.SiLLK"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "sillkallow-inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/65684f2a-01e2-443f-8763-39047d2a965b/resourceGroups/SiLLK/providers/Microsoft.Network/networkSecurityGroups/sillkvmnsg/securityRules/sillkallow-inbound",
            "name": "sillkallow-inbound",
            "network_security_group_name": "sillkvmnsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "SiLLK",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.vm-nsg",
            "azurerm_resource_group.SiLLK"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "publicIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/65684f2a-01e2-443f-8763-39047d2a965b/resourceGroups/SiLLK/providers/Microsoft.Network/publicIPAddresses/sillk-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.102.83.43",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "sillk-pip",
            "resource_group_name": "SiLLK",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.SiLLK"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "endpoint-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.4.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/65684f2a-01e2-443f-8763-39047d2a965b/resourceGroups/SiLLK/providers/Microsoft.Network/virtualNetworks/sillk-vnet/subnets/endpoint-subnet",
            "name": "endpoint-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "SiLLK",
            "virtual_network_name": "sillk-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.SiLLK",
            "azurerm_virtual_network.sillk-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "netapp-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/65684f2a-01e2-443f-8763-39047d2a965b/resourceGroups/SiLLK/providers/Microsoft.Network/virtualNetworks/sillk-vnet/subnets/netapp-subnet",
            "name": "netapp-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "SiLLK",
            "virtual_network_name": "sillk-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.SiLLK",
            "azurerm_virtual_network.sillk-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "vm-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/65684f2a-01e2-443f-8763-39047d2a965b/resourceGroups/SiLLK/providers/Microsoft.Network/virtualNetworks/sillk-vnet/subnets/vm-subnet",
            "name": "vm-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "SiLLK",
            "virtual_network_name": "sillk-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.SiLLK",
            "azurerm_virtual_network.sillk-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "endpoint-sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/65684f2a-01e2-443f-8763-39047d2a965b/resourceGroups/SiLLK/providers/Microsoft.Network/virtualNetworks/sillk-vnet/subnets/endpoint-subnet",
            "network_security_group_id": "/subscriptions/65684f2a-01e2-443f-8763-39047d2a965b/resourceGroups/SiLLK/providers/Microsoft.Network/networkSecurityGroups/sillkepnsg",
            "subnet_id": "/subscriptions/65684f2a-01e2-443f-8763-39047d2a965b/resourceGroups/SiLLK/providers/Microsoft.Network/virtualNetworks/sillk-vnet/subnets/endpoint-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.endpoint-nsg",
            "azurerm_resource_group.SiLLK",
            "azurerm_subnet.endpoint-subnet",
            "azurerm_virtual_network.sillk-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "vm-sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/65684f2a-01e2-443f-8763-39047d2a965b/resourceGroups/SiLLK/providers/Microsoft.Network/virtualNetworks/sillk-vnet/subnets/vm-subnet",
            "network_security_group_id": "/subscriptions/65684f2a-01e2-443f-8763-39047d2a965b/resourceGroups/SiLLK/providers/Microsoft.Network/networkSecurityGroups/sillkvmnsg",
            "subnet_id": "/subscriptions/65684f2a-01e2-443f-8763-39047d2a965b/resourceGroups/SiLLK/providers/Microsoft.Network/virtualNetworks/sillk-vnet/subnets/vm-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.vm-nsg",
            "azurerm_resource_group.SiLLK",
            "azurerm_subnet.vm-subnet",
            "azurerm_virtual_network.sillk-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "sillk-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "695f1de6-5fe1-4b8f-a294-296f7020c86b",
            "id": "/subscriptions/65684f2a-01e2-443f-8763-39047d2a965b/resourceGroups/SiLLK/providers/Microsoft.Network/virtualNetworks/sillk-vnet",
            "location": "eastus",
            "name": "sillk-vnet",
            "resource_group_name": "SiLLK",
            "subnet": [
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/65684f2a-01e2-443f-8763-39047d2a965b/resourceGroups/SiLLK/providers/Microsoft.Network/virtualNetworks/sillk-vnet/subnets/vm-subnet",
                "name": "vm-subnet",
                "security_group": "/subscriptions/65684f2a-01e2-443f-8763-39047d2a965b/resourceGroups/SiLLK/providers/Microsoft.Network/networkSecurityGroups/sillkvmnsg"
              },
              {
                "address_prefix": "10.0.3.0/24",
                "id": "/subscriptions/65684f2a-01e2-443f-8763-39047d2a965b/resourceGroups/SiLLK/providers/Microsoft.Network/virtualNetworks/sillk-vnet/subnets/netapp-subnet",
                "name": "netapp-subnet"
              },
              {
                "address_prefix": "10.0.4.0/24",
                "id": "/subscriptions/65684f2a-01e2-443f-8763-39047d2a965b/resourceGroups/SiLLK/providers/Microsoft.Network/virtualNetworks/sillk-vnet/subnets/endpoint-subnet",
                "name": "endpoint-subnet",
                "security_group": "/subscriptions/65684f2a-01e2-443f-8763-39047d2a965b/resourceGroups/SiLLK/providers/Microsoft.Network/networkSecurityGroups/sillkepnsg"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.SiLLK"
          ]
        }
      ]
    }
  ]
}